@startuml

title __SCREEN1's Class Diagram__\n

  namespace com.projects.Screen1 {
    class com.projects.Screen1.MainActivity {
        - guideDialog : Dialog
        - register2Dialog : Dialog
        - registerDialog : Dialog
        - sportStatusDialog : Dialog
        + onBackPressed()
        + onCheckedChanged()
        + onCheckedChanged()
        + onClick()
        + onProgressChanged()
        + onStartTrackingTouch()
        + onStopTrackingTouch()
        + showFieldContent()
        # onCreate()
        - dismissGuideWindow()
        - endSportStatus()
        - login()
        - moveToNextGuideWindow()
        - register1()
        - register2()
        - showFieldPatternDialog()
        - startGuide()
        - startRegister()
        - startRegister2()
        - startSportStatus()
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.PatternPopup {
        - explanation : TextView
        # onCreate()
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.StarterGuide {
        - layouts : Node<Integer>
        - progress : Node<Integer>
        + StarterGuide()
        + getProgress()
        + moveForth()
        + resetProgress()
    }
  }
  

  com.projects.Screen1.MainActivity .up.|> android.view.View.OnClickListener
  com.projects.Screen1.MainActivity .up.|> android.widget.RadioGroup.OnCheckedChangeListener
  com.projects.Screen1.MainActivity .up.|> android.widget.SeekBar.OnSeekBarChangeListener
  com.projects.Screen1.MainActivity .up.|> com.google.android.material.chip.ChipGroup.OnCheckedChangeListener
  com.projects.Screen1.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.projects.Screen1.MainActivity o-- com.projects.DataManagement.UserHelperDB : dbAccess
  com.projects.Screen1.MainActivity o-- com.projects.Screen1.StarterGuide : starterGuide
  com.projects.Screen1.PatternPopup -up-|> android.app.Activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
